# fresh_attempt

./: .gitignore  README.md
.github/workflows/: flutter.yml  macos.yml  ubuntu.yml  windows.yml
test_cmake/: CMakelists.txt
test_cmake/src/: CMakeLists.txt  main.cpp
test_cobra/: go.mod  main.go
test_cobra/cmd/: config.go  root.go
test_cryptology/: CMakeLists.txt  README.md  release.sh
test_cryptology/src/: aes.cpp  aes.h  des.cpp  des.h  main.cpp  operation_mode.hpp  utils.cpp  utils.h
test_csharp/: Program.cs  cs_learner.csproj
test_csharp/learner/: basic.cs  condition.cs  exception.cs  file.cs  interface.cs  lambda.cs  loop.cs  operations.cs  poly_morphic.cs  structure.cs  variable.cs
test_dart/: pubspec.yaml
test_dart/src/: 01_entry.dart  02_datatype.dart  03_statements.dart  04_list_set_map.dart  05_function.dart  06_oop.dart  (+5 more)
test_dvc/: data.dvc
test_flet/: README.md  pyproject.toml
test_flutter/: .metadata  README.md  pubspec.yaml
test_gflags/: CMakeLists.txt  demo.cpp
test_github_action/: CMakeLists.txt  demo.cpp
test_go/: go.mod  go.sum
test_go_register_class/: go.mod
test_jekyll/: _config.yml
test_latex/: dummy.tex  test.tex
test_libtorch/: CMakeLists.txt
test_libtorch/src/: main.cpp
test_matlab/: dijkstra.m
test_opencv/: CMakeLists.txt  demo.cpp
test_pandoc/: README.md  build.sh
test_python/: test_imageio.py  test_mayavi.py  test_plaidml_keras.py  test_pygame.py  test_ss_code.py  test_tfhub.py  test_vispy.py  test_vscode.ipynb
test_shell/: os_test.sh
test_spider/: CVPR2013-Abstract-Collection.md  CVPR2014-Abstract-Collection.md  CVPR2015-Abstract-Collection.md  CVPR2016-Abstract-Collection.md  CVPR2017-Abstract-Collection.md  CVPR2018-Abstract-Collection.md  ICCV2013-Abstract-Collection.md  ICCV2015-Abstract-Collection.md  ICCV2017-Abstract-Collection.md  README.md  openaccess_abstract.py
test_tf_finetune/: README.md
test_xgo/: main.go
test_xmake/: README.md  xmake.lua
(+63 files in other folders)
